test: refactor unit tests to one-class-per-file with mocked deps and parameterized cases (#127)